first setup html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Concept Opdracht HTML & CSS</title>
 </head>
 <body>
+<!----------4.1 HEADER---------->
+<header class="header__outer-container">
+    <div class="header__inner-container">
+        <nav class="navigation">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="">about us</a></li>
+                <li class="navigation__item"><a href="">case studies</a></li>
+                <li class="navigation__item"><a href="#footer__fullname">contact us</a></li>
+            </ul>
+        </nav>
+        <div class="header__hero-section">
+            <h1 class="header__title">Your website is an investment in the success of your business.</h1>
+            <p class="header__sub">We are here to help you succeed.</p>
+            <a href="#footer__fullname">
+                <button class="button--active">let's work together
+                </button>
+            </a>
+        </div>
+        <div class="header__wave-img"><img src="/Assets/squiggle_line_stripe.svg" alt="Wave Image">
+        </div>
+    </div>
+</header>
 
+<!----------4.2 INTRO---------->
+<section class="intro__outer-container">
+    <div class="intro__inner-container">
+        <h3 class="intro__title">Rekupe is a digital agency in Los Angeles.
+        </h3>
+        <h3 class="intro__title">We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.
+        </h3>
+        <h3 class="intro__title">We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.
+        </h3>
+        <p class="intro__question-click">Have a question? <a href="#footer__fullname">Click here</a> to contact us!</p>
+    </div>
+</section>
+
+<!----------4.3 PROJECTS---------->
+<section class="projects__outer-container">
+    <article class="projects__inner-container">
+        <div class="projects__wrapper">
+            <div class="projects__card">
+                <h2 class="projects__title">Rolling Stone</h2>
+                <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
+                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                </p>
+                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+            </div>
+            <div class="projects__img-wrapper">
+                <img class="projects__img" src="/Assets/work-image-01.jpeg" alt="Rolling Stone Desktop">
+            </div>
+        </div>
+
+        <div class="projects__wrapper">
+            <div class="projects__card">
+                <h2 class="projects__title">Rolling Stone</h2>
+                <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
+                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                </p>
+                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+            </div>
+            <div class="projects__img-wrapper">
+                <img class="projects__img" src="/Assets/work-image-02.jpeg" alt="Rolling Stone Desktop">
+            </div>
+        </div>
+
+        <div class="projects__wrapper">
+            <div class="projects__card">
+                <h2 class="projects__title">Rolling Stone</h2>
+                <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
+                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                </p>
+                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+            </div>
+            <div class="projects__img-wrapper">
+                <img class="projects__img" src="/Assets/work-image-03.jpeg" alt="Rolling Stone Desktop">
+            </div>
+        </div>
+
+        <div class="projects__wrapper">
+            <div class="projects__card">
+                <h2 class="projects__title">Rolling Stone</h2>
+                <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
+                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                </p>
+                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+            </div>
+            <div class="projects__img-wrapper">
+                <img class="projects__img" src="/Assets/work-image-04.jpeg" alt="Rolling Stone Desktop">
+            </div>
+        </div>
+
+        <div class="projects__wrapper">
+            <div class="projects__card">
+                <h2 class="projects__title">Rolling Stone</h2>
+                <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
+                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                </p>
+                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+            </div>
+            <div class="projects__img-wrapper">
+                <img class="projects__img" src="/Assets/work-image-05.jpeg" alt="Rolling Stone Desktop">
+            </div>
+        </div>
+
+        <div class="projects__wrapper">
+            <div class="projects__card">
+                <h2 class="projects__title">Rolling Stone</h2>
+                <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
+                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                </p>
+                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+            </div>
+            <div class="projects__img-wrapper">
+                <img class="projects__img" src="/Assets/work-image-06.jpeg" alt="Rolling Stone Desktop">
+            </div>
+        </div>
+
+    </article>
+</section>
+
+<!----------4.4 SERVICES---------->
+<section class="services__outer-container">
+    <article class="services__inner-container">
+        <div class="services__wrapper">
+            <div class="services__card">
+
+            </div>
+        </div>
+
+    </article>
+</section>
+
+<!----------4.5 FOOTER---------->
+<section class="footer__outer-container">
+    <article class="footer__inner-container">
+
+    </article>
+</section>
+
+<!----------5. MEDIA QUERIES-->
 </body>
 </html>
