intro, projects & services html setup

--- a/index.html
+++ b/index.html
@@ -60,66 +60,66 @@
 
         <div class="projects__wrapper">
             <div class="projects__card">
-                <h2 class="projects__title">Rolling Stone</h2>
+                <h2 class="projects__title">variety</h2>
                 <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
-                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                <p class="projects__text">Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.
                 </p>
-                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+                <a class="projects__link" href="https://www.rekupe.com/variety/">view project</a>
             </div>
             <div class="projects__img-wrapper">
-                <img class="projects__img" src="/Assets/work-image-02.jpeg" alt="Rolling Stone Desktop">
+                <img class="projects__img" src="/Assets/work-image-02.jpeg" alt="Variety Magazine">
             </div>
         </div>
 
         <div class="projects__wrapper">
             <div class="projects__card">
-                <h2 class="projects__title">Rolling Stone</h2>
+                <h2 class="projects__title">variety500</h2>
                 <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
-                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                <p class="projects__text">Variety500 is an index of the 500 most influential business leaders shaping the global $2 trillion entertainment industry.
                 </p>
-                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+                <a class="projects__link" href="https://www.rekupe.com/variety-500/">view project</a>
             </div>
             <div class="projects__img-wrapper">
-                <img class="projects__img" src="/Assets/work-image-03.jpeg" alt="Rolling Stone Desktop">
+                <img class="projects__img" src="/Assets/work-image-03.jpeg" alt="Variety500 Tablet">
             </div>
         </div>
 
         <div class="projects__wrapper">
             <div class="projects__card">
-                <h2 class="projects__title">Rolling Stone</h2>
+                <h2 class="projects__title">worth</h2>
                 <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
-                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                <p class="projects__text">A global media platform connecting a community that embraces worth beyond wealth.
                 </p>
-                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+                <a class="projects__link" href="https://www.rekupe.com/worth/">view project</a>
             </div>
             <div class="projects__img-wrapper">
-                <img class="projects__img" src="/Assets/work-image-04.jpeg" alt="Rolling Stone Desktop">
+                <img class="projects__img" src="/Assets/work-image-04.jpeg" alt="Worth Desktop">
             </div>
         </div>
 
         <div class="projects__wrapper">
             <div class="projects__card">
-                <h2 class="projects__title">Rolling Stone</h2>
+                <h2 class="projects__title">association health plans</h2>
                 <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
-                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                <p class="projects__text">Association health plans are a new alternative to provide small business owners, sole proprietors and freelancers with health insurance at a reduced cost.
                 </p>
-                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+                <a class="projects__link" href="https://www.rekupe.com/association-health-plans/">view project</a>
             </div>
             <div class="projects__img-wrapper">
-                <img class="projects__img" src="/Assets/work-image-05.jpeg" alt="Rolling Stone Desktop">
+                <img class="projects__img" src="/Assets/work-image-05.jpeg" alt="AHP Desktop">
             </div>
         </div>
 
         <div class="projects__wrapper">
             <div class="projects__card">
-                <h2 class="projects__title">Rolling Stone</h2>
+                <h2 class="projects__title">SchoolKit</h2>
                 <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
-                <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
+                <p class="projects__text">SchoolKit works with local educators to improve curriculum so that students can be college and career ready.
                 </p>
-                <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+                <a class="projects__link" href="https://www.rekupe.com/school-kit/">view project</a>
             </div>
             <div class="projects__img-wrapper">
-                <img class="projects__img" src="/Assets/work-image-06.jpeg" alt="Rolling Stone Desktop">
+                <img class="projects__img" src="/Assets/work-image-06.jpeg" alt="SchoolKit Desktop">
             </div>
         </div>
 
@@ -131,7 +131,55 @@
     <article class="services__inner-container">
         <div class="services__wrapper">
             <div class="services__card">
+                <img class="services__logo" src="/Assets/icon_web-design.svg" alt="Web Design Icon">
+                <h4 class="services__title">web design</h4>
+                <p class="services-text">Good web design is how companies stand out from their competitors. High quality web design leads to increased user conversion and engagement. Through a proven web design process, we help clients launch websites and products that improve on their bottom line.
+                </p>
+            </div>
+        </div>
 
+        <div class="services__wrapper">
+            <div class="services__card">
+                <img class="services__logo" src="/Assets/icon_web-development.svg" alt="Web Development Icon">
+                <h4 class="services__title">web development</h4>
+                <p class="services-text">Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites with a mobile first approach and ensure that our code quality is clean, organized and performant. Already have a design but need it developed? We’re here to help!
+                </p>
+            </div>
+        </div>
+
+        <div class="services__wrapper">
+            <div class="services__card">
+                <img class="services__logo" src="/Assets/icon_ux.svg" alt="UX Icon">
+                <h4 class="services__title">user experience</h4>
+                <p class="services-text">In order to build successful products you have to understand the user. We create user personas, wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape the product and can quickly eliminate potential risks – saving you time and money.
+                </p>
+            </div>
+        </div>
+
+        <div class="services__wrapper">
+            <div class="services__card">
+                <img class="services__logo" src="/Assets/icon_graphic-design.svg" alt="Graphic Design Icon">
+                <h4 class="services__title">logo design + branding</h4>
+                <p class="services-text">Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a clear and unique point of view. We will work with you to understand your vision and help create a unique brand identity and style guide for your company.
+                </p>
+            </div>
+        </div>
+
+        <div class="services__wrapper">
+            <div class="services__card">
+                <img class="services__logo" src="/Assets/icon_seo.svg" alt="SEO Icon">
+                <h4 class="services__title">SEO</h4>
+                <p class="services-text">Do you want your site to rank higher in search results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure your website it optimized, providing you the best opportunities for organic search exposure.
+                </p>
+            </div>
+        </div>
+
+        <div class="services__wrapper">
+            <div class="services__card">
+                <img class="services__logo" src="/Assets/icon_copywriting.svg" alt="Copywriting icon">
+                <h4 class="services__title">Copywriting</h4>
+                <p class="services-text">Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We work with you to establish your brand bible and ensure your messaging is focused and targeted.
+                </p>
             </div>
         </div>
 
