worked on projects flexbox & fonts

--- a/index.html
+++ b/index.html
@@ -187,11 +187,30 @@
 </section>
 
 <!----------4.5 FOOTER---------->
-<section class="footer__outer-container">
-    <article class="footer__inner-container">
-
-    </article>
-</section>
+<footer class="footer__outer-container">
+    <section class="footer__inner-container">
+        <div class="footer__hero-section">
+            <h2 class="footer__title">let's work together</h2>
+            <p class="footer__sub">Have a question? Need a quote? Let us know!</p>
+        </div>
+        <form class="footer__javascipt-needed">
+            <section class="footer__personal-information">
+                <label for="footer__fullname">name
+                    <input type="text" id="footer__fullname" placeholder="Name" />
+                </label>
+                <label for="footer__emailaddress">email
+                    <input type="email" id="footer__emailaddress" placeholder="Email" />
+                </label>
+                <label for="footer__message-us">message
+                    <input type="text" id="footer__message-us" placeholder="Message"/>
+                </label>
+            </section>
+            <section class="footer__button-send">
+                <button type="submit">send</button>
+            </section>
+        </form>
+   </section>
+</footer>
 
 <!----------5. MEDIA QUERIES-->
 </body>
