worked on header, intro and projects. Header button made.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400;500&display=swap');
+    </style>
     <title>Concept Opdracht HTML & CSS</title>
 </head>
 <body>
@@ -39,7 +42,7 @@
         </h3>
         <h3 class="intro__title">We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.
         </h3>
-        <p class="intro__question-click">Have a question? <a href="#footer__fullname">Click here</a> to contact us!</p>
+        <p class="intro__question-click">Have a question? <a class="intro__click-here" href="#footer__fullname">Click here</a> to contact us!</p>
     </div>
 </section>
 
