Trying to fix the footer, hasn't worked yet

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                 <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
                 <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
                 </p>
+                <div class="projects__link-wrapper">
                 <a class="projects__link" href="https://www.rekupe.com/rolling-stone/">view project</a>
+                <div class="projects__line"></div>
+                </div>
             </div>
             <div class="projects__img-wrapper">
                 <img class="projects__img" src="/Assets/work-image-01.jpeg" alt="Rolling Stone Desktop">
