Worked on footer and added gradient

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <form class="footer__javascipt-needed">
             <section class="footer__personal-information">
                 <label for="footer__fullname">name
-                    <input type="text" id="footer__fullname" placeholder="Name" />
+                    <input class="footer__fullname" type="text" id="footer__fullname" placeholder="Name" />
                 </label>
                 <label for="footer__emailaddress">email
                     <input type="email" id="footer__emailaddress" placeholder="Email" />
@@ -217,6 +217,9 @@
             </section>
         </form>
    </section>
+ </footer>
+<footer class="footer__outer-container2">
+
 </footer>
 
 <!----------5. MEDIA QUERIES-->
