--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400;500&display=swap');
-    </style>
+<!--    <style>-->
+<!--        @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400;500&display=swap');-->
+<!--    </style>-->
     <title>Concept Opdracht HTML & CSS</title>
 </head>
 <body>
@@ -218,9 +218,9 @@
         </form>
    </section>
  </footer>
-<footer class="footer__outer-container2">
-
-</footer>
+<section class="footer__outer-container2">
+    <p class="footer__copyright">Business website opdracht © NOVI Hogeschool 2022</p>
+</section>
 
 <!----------5. MEDIA QUERIES-->
 </body>
