working on footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
@@ -201,20 +201,20 @@
             <p class="footer__sub">Have a question? Need a quote? Let us know!</p>
         </div>
         <form class="footer__javascipt-needed">
-            <section class="footer__personal-information">
-                <label for="footer__fullname">name
-                    <input class="footer__fullname" type="text" id="footer__fullname" placeholder="Name" />
-                </label>
-                <label for="footer__emailaddress">email
-                    <input type="email" id="footer__emailaddress" placeholder="Email" />
-                </label>
-                <label for="footer__message-us">message
-                    <input type="text" id="footer__message-us" placeholder="Message"/>
-                </label>
-            </section>
-            <section class="footer__button-send">
-                <button type="submit">send</button>
-            </section>
+           <label for="footer__fullname">name
+                <input class="footer__fullname" type="text" id="footer__fullname" placeholder="Name" />
+           </label>
+
+           <label for="footer__emailaddress">email
+                <input type="email" id="footer__emailaddress" placeholder="Email" />
+           </label>
+
+           <label for="footer__message-us">message
+                <textarea id="footer__message-us" placeholder="Message" cols="100" rows="35"></textarea>
+           </label>
+
+           <button type="submit">send</button>
+
         </form>
    </section>
  </footer>
