finished services and worked on projects

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <textarea id="footer__message-us" placeholder="Message" cols="100" rows="35"></textarea>
            </label>
 
-           <button type="submit">send</button>
+           <button class="footer__button-send" type="submit">send</button>
 
         </form>
    </section>
