fixed footer form and took some classes out of index.html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <!--    <style>-->
-    <!--        @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400;500&display=swap');-->
-    <!--    </style>-->
     <title>Concept Opdracht HTML & CSS</title>
 </head>
 <body>
 <!----------4.1 HEADER---------->
 <header class="header__outer-container">
     <div class="header__inner-container">
-        <nav class="navigation">
+
+        <nav>
             <ul class="navigation__list">
                 <li class="navigation__item"><a href="">about us</a></li>
                 <li class="navigation__item"><a href="">case studies</a></li>
@@ -20,7 +18,7 @@
             </ul>
         </nav>
         <div class="header__hero-section">
-            <h1 class="header__title">Your website is an investment in the success of your business.</h1>
+            <h1>Your website is an investment in the success of your business.</h1>
             <p class="header__sub">We are here to help you succeed.</p>
             <a href="#footer__fullname">
                 <button class="button--active">let's work together
@@ -37,12 +35,12 @@
 <main>
     <section class="intro__outer-container">
         <div class="intro__inner-container">
-            <h3 class="intro__title">Rekupe is a digital agency in Los Angeles.
+            <h3>Rekupe is a digital agency in Los Angeles.
             </h3>
-            <h3 class="intro__title">We use strategic UX, SEO optimization and beautiful visual designs to help your
+            <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your
                 business grow.
             </h3>
-            <h3 class="intro__title">We see every project as a fresh opportunity, pushing ourselves to create new
+            <h3>We see every project as a fresh opportunity, pushing ourselves to create new
                 digital experiences.
             </h3>
             <p class="intro__question-click">Have a question? <a class="intro__click-here" href="#footer__fullname">Click
@@ -55,7 +53,7 @@
         <article class="projects__inner-container">
             <div class="projects__wrapper">
                 <div class="projects__card">
-                    <h2 class="projects__title">Rolling Stone</h2>
+                    <h2>Rolling Stone</h2>
                     <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
                     <p class="projects__text">You know Rolling Stone. It’s the definitive voice in music, politics and
                         culture. It’s a global icon.
@@ -72,7 +70,7 @@
 
             <div class="projects__wrapper">
                 <div class="projects__card">
-                    <h2 class="projects__title">variety</h2>
+                    <h2>variety</h2>
                     <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
                     <p class="projects__text">Variety is an industry leader for breaking entertainment news, reviews and
                         box office results with archive of content dating back to 1905.
@@ -86,7 +84,7 @@
 
             <div class="projects__wrapper">
                 <div class="projects__card">
-                    <h2 class="projects__title">variety500</h2>
+                    <h2>variety500</h2>
                     <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
                     <p class="projects__text">Variety500 is an index of the 500 most influential business leaders
                         shaping the global $2 trillion entertainment industry.
@@ -100,7 +98,7 @@
 
             <div class="projects__wrapper">
                 <div class="projects__card">
-                    <h2 class="projects__title">worth</h2>
+                    <h2>worth</h2>
                     <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
                     <p class="projects__text">A global media platform connecting a community that embraces worth beyond
                         wealth.
@@ -114,7 +112,7 @@
 
             <div class="projects__wrapper">
                 <div class="projects__card">
-                    <h2 class="projects__title">association health plans</h2>
+                    <h2>association health plans</h2>
                     <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
                     <p class="projects__text">Association health plans are a new alternative to provide small business
                         owners, sole proprietors and freelancers with health insurance at a reduced cost.
@@ -128,7 +126,7 @@
 
             <div class="projects__wrapper">
                 <div class="projects__card">
-                    <h2 class="projects__title">SchoolKit</h2>
+                    <h2>SchoolKit</h2>
                     <img class="projects__squiggle-img" src="/Assets/squiggle_line.svg" alt="Wave Image">
                     <p class="projects__text">SchoolKit works with local educators to improve curriculum so that
                         students can be college and career ready.
@@ -149,7 +147,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <img class="services__logo" src="/Assets/icon_web-design.svg" alt="Web Design Icon">
-                <h4 class="services__title">web design</h4>
+                <h4>web design</h4>
                 <p class="services-text">Good web design is how companies stand out from their competitors. High quality
                     web design leads to increased user conversion and engagement. Through a proven web design process,
                     we help clients launch websites and products that improve on their bottom line.
@@ -160,7 +158,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <img class="services__logo" src="/Assets/icon_web-development.svg" alt="Web Development Icon">
-                <h4 class="services__title">web development</h4>
+                <h4>web development</h4>
                 <p class="services-text">Modern websites need to be responsive and fully functional at all sizes. We
                     develop all of our sites with a mobile first approach and ensure that our code quality is clean,
                     organized and performant. Already have a design but need it developed? We’re here to help!
@@ -171,7 +169,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <img class="services__logo" src="/Assets/icon_ux.svg" alt="UX Icon">
-                <h4 class="services__title">user experience</h4>
+                <h4>user experience</h4>
                 <p class="services-text">In order to build successful products you have to understand the user. We
                     create user personas, wireframes and prototypes to test with users. This allows us to gather
                     feedback which helps to shape the product and can quickly eliminate potential risks – saving you
@@ -183,7 +181,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <img class="services__logo" src="/Assets/icon_graphic-design.svg" alt="Graphic Design Icon">
-                <h4 class="services__title">logo design + branding</h4>
+                <h4>logo design + branding</h4>
                 <p class="services-text">Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common?
                     Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a
                     clear and unique point of view. We will work with you to understand your vision and help create a
@@ -195,7 +193,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <img class="services__logo" src="/Assets/icon_seo.svg" alt="SEO Icon">
-                <h4 class="services__title">SEO</h4>
+                <h4>SEO</h4>
                 <p class="services-text">Do you want your site to rank higher in search results? Google is constantly
                     changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We
                     will make sure your website it optimized, providing you the best opportunities for organic search
@@ -207,7 +205,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <img class="services__logo" src="/Assets/icon_copywriting.svg" alt="Copywriting icon">
-                <h4 class="services__title">Copywriting</h4>
+                <h4>Copywriting</h4>
                 <p class="services-text">Brand messaging needs to be clear, direct and easy to understand to be
                     effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We
                     work with you to establish your brand bible and ensure your messaging is focused and targeted.
@@ -225,17 +223,18 @@
             <h2 class="footer__title">let's work together</h2>
             <p class="footer__sub">Have a question? Need a quote? Let us know!</p>
         </div>
-        <form class="footer__javascipt-needed">
+        <form>
             <label for="footer__fullname">name
                 <input class="footer__fullname" type="text" id="footer__fullname" placeholder="Name"/>
             </label>
 
-            <label for="footer__emailaddress">email
-                <input type="email" id="footer__emailaddress" placeholder="Email"/>
+            <label for="footer__email">email
+                <input class="footer__fullname" type="text" id="footer__email" placeholder="Email"/>
+
             </label>
 
             <label for="footer__message-us">message
-                <textarea id="footer__message-us" placeholder="Message" cols="100" rows="35"></textarea>
+                <textarea id="footer__message-us" placeholder="Message" cols="100" rows="5"></textarea>
             </label>
 
             <button class="footer__button-send" type="submit">send</button>
